--- a/html/site.html
+++ b/html/site.html
@@ -188,7 +188,7 @@
                     </div>
                     <div class="col-12 col-md-6">
                         <p>当店のコーヒー豆が厳選して世界中から買い付けています。自社のロースタリーで焙煎しています。</p>
-                    </div class="col-12 col-md-6">
+                    </div>
                 </div>
             </div>
 
