--- a/html/site.html
+++ b/html/site.html
@@ -178,7 +178,7 @@
                 <h1 class="mb-4 fw-bold fs-2">Signature Food</h1>
                 <div class="row g-2 mb-5">
                     <div class="col-12 col-md-6">
-                        <img src="../img/food.jpg" class="img-fluid food_image" alt="">
+                        <img src="../img/food.jpg" class="img-fluid food-image" alt="">
                     </div>
                     <div class="col-12 col-md-6">
                         <p>サーモンは刺身やカルパッチョで食べるのが美味しいですが、リッチな気分になれるサーモンステーキがおすすめです。サーモンの美味しさを引き立てる2種のソースも絶品です！</p>
@@ -190,7 +190,7 @@
                 <h1 class="mb-4 fw-bold fs-2">Our Coffee</h1>
                 <div class="row g-2 mb-5">
                     <div class="col-12 col-md-6">
-                        <img src="../img/barista.jpg" class="img-fluid food_image" alt="">
+                        <img src="../img/barista.jpg" class="img-fluid food-image" alt="">
                     </div>
                     <div class="col-12 col-md-6">
                         <p>当店のコーヒー豆が厳選して世界中から買い付けています。自社のロースタリーで焙煎しています。</p>
@@ -202,7 +202,7 @@
                 <h1 class="mb-4 fw-bold fs-2">Our Food</h1>
                 <div class="row g-2 mb-5">
                     <div class="col-12 col-md-6">
-                        <img src="../img/food3.jpg" class="img-fluid food_image" alt="">
+                        <img src="../img/food3.jpg" class="img-fluid food-image" alt="">
                     </div>
                     <div class="col-12 col-md-6">
                         <p>当店は何よりまずは衛生管理に気をつけています。「安心・安全」をお届けするために日々努力しています。</p>
@@ -237,25 +237,25 @@
 
                 <div class="row justify-content-between">
                     <div class="col-6 col-md-2 text-center">
-                        <div class="restaurant_img">
+                        <div class="restaurant-img">
                             <img src="../img/restaurant2.jpg" class="rounded-circle img-fluid mb-1">
                             <p><i class="bi bi-geo-alt-fill"></i>東京都渋谷区xxxx xxxx</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-2 text-center">
-                        <div class="restaurant_img">
+                        <div class="restaurant-img">
                             <img src="../img/restaurant3.jpg" class="rounded-circle img-fluid mb-1">
                             <p><i class="bi bi-geo-alt-fill"></i>千葉県松戸市xxxx xxxx</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-2 text-center">
-                        <div class="restaurant_img">
+                        <div class="restaurant-img">
                             <img src="../img/restaurant4.jpg" class="rounded-circle img-fluid mb-1">
                             <p><i class="bi bi-geo-alt-fill"></i>神奈川県横浜市xxxx xxxx</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-2 text-center">
-                        <div class="restaurant_img">
+                        <div class="restaurant-img">
                             <img src="../img/restaurant5.jpg" class="rounded-circle img-fluid mb-1">
                             <p><i class="bi bi-geo-alt-fill"></i>埼玉県川越市xxxx xxxx</p>
                         </div>
